revise contact section styles. update class names to abide BEM convention. add z-index to ensure work section is clickable above SVG

--- a/src/scss/components/_testimonials.scss
+++ b/src/scss/components/_testimonials.scss
@@ -23,14 +23,17 @@
     }
   }
 
-  &__name {
-    font-weight: bold;
-    display: inline-block;
-    border-bottom: 1px dotted $accent;
-    margin-bottom: 6px;
+  &__link {
+    border-bottom: 2px solid $accent;
 
-    &:hover {
-      border-bottom-style: solid;
+    &--name {
+      font-weight: bold;
+      display: inline-block;
+      margin-bottom: 6px;
+    }
+
+    &--dashed {
+      border-bottom: 2px dashed $accent;
     }
   }
 
